# prefect-process-planner

./: .env.example  .gitignore  Makefile  README.md  index.html  pyproject.toml
preview/: app.js  index.html
src/: main.py  orchestrator.py  planner.py  server.py  settings.py
src/models/: dag.py
src/tools/: ai.py  decorator.py  jsonplaceholder.py  logic.py  registry.py  report.py
