[project]
name = "poc-prefect-processes"
version = "0.1.0"
description = "POC: AI-driven DAG orchestration with Prefect and Gemini 2.5 Flash"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-aiplatform>=1.143.0",
    "httpx>=0.28.1",
    "prefect>=3.6.24",
    "pydantic>=2.12.5",
]
